# wells4hydrogeology

./: .gitignore  README.md  master_notebook.ipynb  master_notebook_singleCell.ipynb  naturalNeighborNotebook.ipynb  nlpPractice.ipynb  pyproject.toml  requirements.txt  run_sample_data.ipynb  run_test.py  setup.py  testnotebook.ipynb  testnotebook2.ipynb
.github/workflows/: pypi-publish.yaml
doc/: docReadme.md
docs/: .buildinfo  _generate_docs.py  classify.html  clean.html  conf.py  core.html  export.html  generate_docs.py  genindex.html  index.html  index.rst  layers.html  main.html  mapping.html  objects.inv  py-modindex.html  read.html  readme.md  requirements.txt  search.html  searchindex.js  utilities.html  w4h.classify.html  w4h.classify.rst  w4h.clean.html  w4h.clean.rst  w4h.core.html  w4h.core.rst  w4h.export.html  w4h.export.rst  w4h.html  w4h.layers.html  w4h.layers.rst  w4h.mapping.html  w4h.mapping.rst  w4h.read.html  w4h.read.rst  w4h.rst  w4h.visualization.html  w4h.visualization.rst  (+1 more)
docs/_build/doctrees/: environment.pickle  index.doctree  w4h.classify.doctree  w4h.clean.doctree  w4h.core.doctree  w4h.doctree  w4h.export.doctree  w4h.layers.doctree  w4h.mapping.doctree  w4h.read.doctree  w4h.visualization.doctree  w4h.w4h_gui.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  w4h.html  (+9 more)
docs/_static/: documentation_options.js
docs/w4h/: classify.html  clean.html  export.html  index.html  mapping.html  read.html
examples/: master_notebook_singleCell.ipynb
lib/: classify.py  cleanData.py  layers.py  libReadme.md  mapping.py  readData.py
readthedocs/: .readthedocs.yaml
res/: Lithology_Interp_Silt.csv  SearchTerms-Start.csv  downholeDataTypes.txt  headerDataTypes.txt  resReadme.md  xyzDataTypes.txt
resources/: Lithology_Interp_Clay.csv  Lithology_Interp_FineCoarse.csv  SearchTerms-Specific_2022-11-16_essCols.csv  resReadme.md  temp4wiki.py  uniqueparameters.xlsx  xyzDataTypes.txt
resources/sample_data/: downholeDataTypes.txt
w4h/: ToDo.txt  __init__.py  classify.py  clean.py  core.py  export.py  layers.py  mapping.py  read.md  read.py  readme.md  temp4wiki.py  utilities.py  visualization.py  w4h_gui.py
w4h/resources/: base_lithology_terms.csv  lithology_codes_USGS_GWSI.json  procesing_diagram.pptx
wells4hydro/: ToDo.txt  classify.py  mapping.py  read.py
wells4hydrogeology/: classify.py  layers.py  mapping.py
(+27 files in other folders)
