[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wells4hydrogeology"
dynamic = ["readme"]
license = {file = "LICENSE"}
version="0.0.25"
description = "A package to read in geology data from wells and create a layered, gridded hydrogeologic model of a study region, all within a python environment, automating and performing tasks often carried out in a dedicated GIS software."
keywords = ["hydrogeology", "modflow", "water wells", "geology", 'water', 'geotechnical']
requires-python = " >=3.9, <3.13"
dependencies =  ["geopandas", "rioxarray", "owslib", "scipy", "matplotlib", "pandas", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

[project.urls]
"Homepage" = "https://github.com/RJbalikian/wells4hydrogeology"
"API Docs (Github Pages)" = "https://rjbalikian.github.io/wells4hydrogeology/main.html"
"API Docs (ReadtheDocs)" = "https://wells4hydrogeology.readthedocs.io/en/latest/"
"API Docs (dev - ReadtheDocs)" = "https://wells4hydrogeology.readthedocs.io/en/dev/"
"Tutorials & Wiki" = "https://github.com/RJbalikian/wells4hydrogeology/wiki"
